# transform-agent

./: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
sdk/: transform_agent_sdk.py
src/transform_agent/: app.py
src/transform_agent/auth/: provision.py
src/transform_agent/discovery/: a2a_card.py  mcp.py  mcp_handler.py  openapi.py
src/transform_agent/middleware/: metering.py  rate_limit.py
src/transform_agent/models/: schemas.py
src/transform_agent/payment/: x402.py
src/transform_agent/transforms/: documents.py  encoding.py  markup.py  registry.py  schema.py  tabular.py
tests/: test_api.py  test_transforms.py
